--- a/src/python-fastapi/pyproject.toml
+++ b/src/python-fastapi/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "uvloop>=0.19.0",
     "httptools>=0.6.0",
     "granian>=2.5.5",
+    "orjson>=3.9.10",
 ]
 
 [dependency-groups]
