--- a/src/js-effect/package.json
+++ b/src/js-effect/package.json
@@ -10,9 +10,11 @@
     "db-codegen": "kysely-codegen --out-file src/kysely_schema.ts"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/bun": "latest",
     "@types/pg": "^8.15.5",
-    "kysely-codegen": "^0.19.0"
+    "kysely-codegen": "^0.19.0",
+    "tsx": "^4.19.2"
   },
   "peerDependencies": {
     "typescript": "^5.9.3"
@@ -20,8 +22,10 @@
   "dependencies": {
     "@effect/platform": "^0.92.1",
     "@effect/platform-bun": "^0.81.1",
+    "@effect/platform-node": "^0.98.4",
     "@effect/sql": "^0.46.0",
     "@effect/sql-pg": "^0.47.0",
+    "bcryptjs": "^2.4.3",
     "effect": "^3.18.4",
     "jose": "^6.1.0",
     "kysely": "^0.28.8",
