chore(infra): update devcontainer and dashboard labels

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,49 +1,56 @@
 FROM mcr.microsoft.com/devcontainers/python:3.14
 
-# Install node 24
+# Install basics
+RUN apt update && apt install -y just wget curl procps git build-essential
 
-RUN curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.40.1/install.sh | bash && \
-    export NVM_DIR="$HOME/.nvm"
-
-RUN [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" && \
-    nvm install 24 && \
-    nvm use 24 && \
-    nvm alias default 24
+# Install node 24 and bun
+ENV NVM_DIR=/usr/local/nvm
+ENV NODE_VERSION=24
+RUN mkdir -p $NVM_DIR && \
+    curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.40.1/install.sh | bash && \
+    . $NVM_DIR/nvm.sh && \
+    nvm install $NODE_VERSION && \
+    nvm alias default $NODE_VERSION && \
+    nvm use default && \
+    # Create symlinks for global access
+    NODE_BIN=$(. $NVM_DIR/nvm.sh && nvm which $NODE_VERSION) && \
+    NODE_PATH=$(dirname "$NODE_BIN") && \
+    ln -s "$NODE_BIN" /usr/local/bin/node && \
+    ln -s "$NODE_PATH/npm" /usr/local/bin/npm && \
+    ln -s "$NODE_PATH/npx" /usr/local/bin/npx
 
 # Install uv
-
 RUN curl -LsSf https://astral.sh/uv/install.sh | sh
 
 # Install bun (package manager)
-
-RUN curl -fsSL https://bun.sh/install | bash
-
-# Install just (command runner)
-
-RUN wget -qO - 'https://proget.makedeb.org/debian-feeds/prebuilt-mpr.pub' | gpg --dearmor | sudo tee /usr/share/keyrings/prebuilt-mpr-archive-keyring.gpg 1> /dev/null
-RUN echo "deb [arch=all,$(dpkg --print-architecture) signed-by=/usr/share/keyrings/prebuilt-mpr-archive-keyring.gpg] https://proget.makedeb.org prebuilt-mpr $(lsb_release -cs)" | sudo tee /etc/apt/sources.list.d/prebuilt-mpr.list
-RUN apt update && apt install just
+RUN curl -fsSL https://bun.sh/install | bash && \
+    ln -s /root/.bun/bin/bun /usr/local/bin/bun
 
 # Install Rust
-
 RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable
-RUN echo 'source $HOME/.cargo/env' >> $HOME/.bashrc
-RUN echo 'source $HOME/.cargo/env' >> $HOME/.zshrc
-ENV RUSTUP_TOOLCHAIN=stable
-ENV PATH="$HOME/.cargo/bin:$PATH"
-RUN /root/.cargo/bin/rustup update stable
+ENV PATH="/root/.cargo/bin:$PATH"
+RUN rustup update stable
 
-# Install Go
+# Install Go and k6 (architecture aware)
+RUN ARCH=$(uname -m) && \
+    if [ "$ARCH" = "aarch64" ] || [ "$ARCH" = "arm64" ]; then \
+        GO_ARCH="arm64"; \
+        K6_ARCH="arm64"; \
+    else \
+        GO_ARCH="amd64"; \
+        K6_ARCH="amd64"; \
+    fi && \
+    # Install Go
+    curl -LO "https://go.dev/dl/go1.25.3.linux-${GO_ARCH}.tar.gz" && \
+    tar -C /usr/local -xzf "go1.25.3.linux-${GO_ARCH}.tar.gz" && \
+    rm "go1.25.3.linux-${GO_ARCH}.tar.gz" && \
+    # Install k6
+    curl -LO "https://github.com/grafana/k6/releases/download/v1.3.0/k6-v1.3.0-linux-${K6_ARCH}.tar.gz" && \
+    tar -xzf "k6-v1.3.0-linux-${K6_ARCH}.tar.gz" && \
+    mv "k6-v1.3.0-linux-${K6_ARCH}/k6" /usr/local/bin/ && \
+    rm -rf "k6-v1.3.0-linux-${K6_ARCH}" "k6-v1.3.0-linux-${K6_ARCH}.tar.gz"
 
-RUN curl -LO https://go.dev/dl/go1.25.3.linux-arm64.tar.gz \
-    && tar -C /usr/local -xzf go1.25.3.linux-arm64.tar.gz \
-    && rm go1.25.3.linux-arm64.tar.gz
-
-ENV PATH="/usr/local/go/bin:$PATH"
-
-# Install Grafana k6
-
-RUN curl -LO https://github.com/grafana/k6/releases/download/v1.3.0/k6-v1.3.0-linux-amd64.tar.gz && \
-    tar -xzf k6-v1.3.0-linux-amd64.tar.gz && \
-    mv k6-v1.3.0-linux-amd64/k6 /usr/local/bin/ && \
-    rm -rf k6-v1.3.0-linux-amd64 k6-v1.3.0-linux-amd64.tar.gz
+# Set up paths and shell environment
+ENV PATH="/usr/local/go/bin:/root/.cargo/bin:/root/.bun/bin:/root/.local/bin:$PATH"
+RUN echo "source $NVM_DIR/nvm.sh" >> /root/.bashrc && \
+    echo "export PATH=\"/usr/local/go/bin:/root/.cargo/bin:/root/.bun/bin:/root/.local/bin:\$PATH\"" >> /root/.bashrc
